tests/compile_fail/conflicting_file.stderr
error: `no_file` and `file` are conflicting attributes, they cannot go together in the same field.
 --> $DIR/conflicting_file.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
